# toy-payments-engine

./: Cargo.toml  README.md
src/: main.rs
src/io/: account.rs  mod.rs  reader.rs  transaction.rs  writer.rs
src/payments/: account.rs  engine.rs  mod.rs  transaction.rs
src/processors/: mod.rs  simple.rs
